--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trioll - The Future of Game Discovery</title>
+    <link rel="stylesheet" href="mobile-fixes.css">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,900&family=Space+Grotesk:wght@400;500;700&family=Inter:wght@300;400;500;600&display=swap");
 
